main/default/objects/PDF_Mapping__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electric Lightwave Premier</fullName>
            </value>
            <value>
                <fullName>Government and Education</fullName>
            </value>
            <value>
                <fullName>Indirect Sales</fullName>
            </value>
            <value>
                <fullName>Integra Business</fullName>
            </value>
            <value>
                <fullName>Integra Legacy</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>