main/default/objects/PDF_Mapping__c/fields/Selected_PDFS__c.field-meta.xml
<CustomField>
    <fullName>Selected_PDFS__c</fullName>
    <label>Selected PDFS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>