main/default/objects/PDF_Mapping__c/fields/SPC_Product__c.field-meta.xml
<CustomField>
    <fullName>SPC_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPC Product</label>
    <referenceTo>SPC_Product__c</referenceTo>
    <relationshipLabel>PDF Mappings</relationshipLabel>
    <relationshipName>PDF_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>